--- a/project1.html
+++ b/project1.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Ulan Juniarti</h1>
+    <h1>28 Juni 2003</h1>
+    <h1>Perumahan Cikampek Baru, Karawang</h1>
 </body>
 </html>
