tambah deskripsi singkat

--- a/project2.html
+++ b/project2.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p>Halo, Saya Ulan Juniarti Saya hobi menggambar, mendengarkan musik, dan memasak</p>
+    <p>Hewan kesukaan saya adalah kucing dan serigala, Saya mempunyai kucing bernama Bubu</p>
 </body>
 </html>
